--- a/src/app/components/slideshow-cut/slideshow-cut.component.html
+++ b/src/app/components/slideshow-cut/slideshow-cut.component.html
@@ -1,7 +1,7 @@
 <ion-slides [options]="slideOpts">
   <ion-slide *ngFor="let pelicula of peliculas">
     
-    <ion-card  (click)="verDetalle(pelicula.id_movie,pelicula.dia_cut,pelicula.hora_cut )">
+    <ion-card class="border-radius" (click)="verDetalle(pelicula.id_movie,pelicula.dia_cut,pelicula.hora_cut )">
       <img class="poster" src="{{pelicula.image}}">
     </ion-card>
 
