--- a/src/app/components/slideshow-pares/slideshow-pares.component.html
+++ b/src/app/components/slideshow-pares/slideshow-pares.component.html
@@ -4,7 +4,7 @@
     <ion-row>
       
       <ion-col size="12" *ngFor="let pelicula of pares">
-        <ion-card mode="md" (click)="verDetalle(pelicula.id)">
+        <ion-card mode="md" (click)="verDetalle(pelicula.id)" class="border-radius">
           <img class="poster"
                 [src]="pelicula.poster_path | imagen">
         </ion-card>
