--- a/src/app/evento/evento.page.html
+++ b/src/app/evento/evento.page.html
@@ -19,7 +19,7 @@
 			</ion-col>
 			
 			<ion-col size="5">
-				<b style="color:green;margin-top: 3em;">Centro universitario de Tonala</b>
+				<b style="color:green;margin-top: 3em;">Centro <br> Universitario de <br> Tonala</b>
 			</ion-col>
 			<ion-col size="1">
 				
