--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -28,7 +28,7 @@
   </div>
  
  <div *ngIf="!voto > 0">
-   <h1 text-center>Aun no hay suficientes votos</h1>
+   <h1 text-center>No hay suficientes votos</h1>
    <p style="text-align:justify;padding: 1em;">En este apartado los alumnos podran elegir que peliculas les gustaria que pusieran en la cartelera.</p>
    <p style="font-weight: bold;font-size:0.95em;text-align: justify;padding: 1em;">*Los administradores de la cineteca veran las opciones y ellos decidiran si la pelicula es apta para presenterla en el cine</p>
  </div>
