--- a/src/app/evento/evento.page.html
+++ b/src/app/evento/evento.page.html
@@ -9,7 +9,7 @@
 
 
 <ion-content class="animated delay-1s fadeIn slow" fullscreen style="background: #f1f1f1;">
-	<img class="cover" style="margin-top: -5.5em;width: 100%;" src="{{event[0].image}}"alt="">
+	<img class="cover" style="margin-top: -5.5em;width: 100%;" src="{{event.image}}"alt="">
 		<ion-row padding class="animated fadeIn slow delay-2s" >
 			<ion-col size="1">
 				
@@ -27,10 +27,10 @@
 		</ion-row>
 	
 
-	<p style="margin-top:-1.5em;text-align: center;font-weight:bold;padding: 1.6em;font-size: 1.7em;" class="ion-text-capitalize">{{event[0].title}}</p>
-	<p  text-justify style="margin-top: -4em;padding: 2em;" class="ion-text-capitalize">{{event[0].description}}</p>
+	<p style="margin-top:-1.5em;text-align: center;font-weight:bold;padding: 1.6em;font-size: 1.7em;" class="ion-text-capitalize">{{event.title}}</p>
+	<p  text-justify style="margin-top: -4em;padding: 2em;" class="ion-text-capitalize">{{event.description}}</p>
 	<h4 text-center style="color:#004346;font-weight: bold;">Dia del evento</h4>
-	<p text-center style="color:#2660A4;font-weight: bold;margin-bottom: 4em;">{{fecha | date:'dd/MM/yyyy'}} {{hora}}</p>
-	<img style="width: 100%;" src="{{event[0].image}}" alt="">
+	<p text-center style="color:#2660A4;font-weight: bold;margin-bottom: 4em;">{{fecha | date: 'dd/MM/yyyy'}} {{hora}}</p>
+	<img style="width: 100%;" src="{{event.image}}" alt="">
 
 </ion-content>
