--- a/src/app/eventos/eventos.page.html
+++ b/src/app/eventos/eventos.page.html
@@ -19,14 +19,17 @@
   <img class="cover" style="margin-top: -7em;" src="https://i.ibb.co/g9DwHRF/ss-min.jpg"alt="">
 
   
-  <h1 style="text-align:center;margin-bottom:2em;color: #f66a6b;font-weight: bold;font-size: 2em;">Eventos</h1>
+  <h1 style="text-align:center;color: #f66a6b;font-weight: bold;font-size: 2em;">Eventos</h1>
 
 <div padding>
-	<div routerLink="/evento/1" *ngFor="let event of events">
-	<p style="color:#f25a2b;display: block;overflow: hidden;
-  text-overflow: ellipsis;white-space: nowrap; width: 60%;font-weight: bold;" class="ion-text-capitalize">{{event.title}}<p>
-	<span style="color:#0d6d32fa;font-size:0.8em;font-weight: bold;">{{ event.fecha  }}</span>
-		<img style="position: relative;float: right;margin-top: -3.5em;border-radius: 1em;" src="{{event.image}}" width="130" alt="">
+	<div  *ngFor="let event of events">
+ 
+    <div (click)="ircaca(event.id)" style="margin-bottom: 8em;">
+      	<p style="color:#f25a2b;display: block;overflow: hidden;
+        text-overflow: ellipsis;white-space: nowrap; width: 60%;font-weight: bold;" class="ion-text-capitalize">{{event.title}}<p>
+      	<span style="color:#0d6d32fa;font-size:0.8em;font-weight: bold;">{{ event.fecha  }}</span>
+      		<img style="position: relative;float: right;margin-top: -3.5em;border-radius: 1em;" src="{{event.image}}" width="130" alt="">
+           </div>
 	</div>
 </div>
 </ion-content>
