--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -24,6 +24,8 @@
         <ion-button padding shape="round" expand="full" color="primary" id="login" class="submit-btn"   type="submit" [disabled]="!registerForm.form.valid">Ingresar</ion-button>
        
 
+
     </form>
 
+       <p (click)="ingresar()" style="text-align: center !important;margin-top: 2em;color:#17202F;" padding>Ingresar como invitado</p>
 </ion-content>
